taalbug; portofolio -> portfolio

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <nav class="align-items-center" id="desktop_nav">
             <ul class="d-flex list-style-type-none justify-content-between align-items-center">
                 <li><a class="text-decoration-none text-uppercase" href="#">home</a></li>
-                <li><a class="text-decoration-none text-uppercase" href="#">portofolio</a></li>
+                <li><a class="text-decoration-none text-uppercase" href="#">portfolio</a></li>
                 <li><a class="text-decoration-none text-uppercase" href="#">about</a></li>
                 <li><a class="text-decoration-none text-uppercase" href="#">blog</a></li>
                 <li><a class="text-decoration-none text-uppercase" href="#">contact</a></li>
@@ -50,7 +50,7 @@
     <div class="text-center" id="submenu">
         <ul class="list-style-type-none">
             <li><a class="text-decoration-none text-uppercase text-white" href="#">home</a></li>
-            <li><a class="text-decoration-none text-uppercase text-white" href="#">portofolio</a></li>
+            <li><a class="text-decoration-none text-uppercase text-white" href="#">portfolio</a></li>
             <li><a class="text-decoration-none text-uppercase text-white" href="#">about</a></li>
             <li><a class="text-decoration-none text-uppercase text-white" href="#">blog</a></li>
             <li><a class="text-decoration-none text-uppercase text-white" href="#">contact</a></li>
